# DXC

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/dxc-cli/: Cargo.toml
crates/dxc-cli/src/: main.rs
crates/dxc-converter/: Cargo.toml
crates/dxc-converter/src/: lib.rs
crates/dxc-core/: Cargo.toml
crates/dxc-core/src/: config.rs  error.rs  lib.rs  media.rs
crates/dxc-db/: Cargo.toml
crates/dxc-db/src/: lib.rs  models.rs  storage.rs
crates/dxc-helpers/: Cargo.toml
crates/dxc-helpers/src/: path.rs
crates/dxc-providers/: Cargo.toml
crates/dxc-providers/src/: bilibili.rs  facebook.rs  generic.rs  instagram.rs  lib.rs  pinterest.rs  provider.rs  reddit.rs  soundcloud.rs  tiktok.rs  twitter.rs  vimeo.rs  youtube.rs  ytdlp.rs
crates/dxc-utils/: Cargo.toml
crates/dxc-utils/src/: format.rs  lib.rs
