[package]
name = "dxc-cli"
version = "0.1.1"
edition = "2024"
description = "DXC CLI - Download videos, audio, and images from the web"
license = "MIT"
repository = "https://github.com/mrsyntaxdev/DXC"
homepage = "https://github.com/mrsyntaxdev/DXC"
keywords = ["dxc", "downloader", "youtube", "media", "cli"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "dxc"
path = "src/main.rs"

[dependencies]
dxc-core = { path = "../dxc-core", version = "0.1.1" }
dxc-providers = { path = "../dxc-providers", version = "0.1.1" }
dxc-db = { path = "../dxc-db", version = "0.1.1" }
dxc-converter = { path = "../dxc-converter", version = "0.1.1" }
dxc-helpers = { path = "../dxc-helpers", version = "0.1.1" }

clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = "0.8"
indicatif = "0.17"
colored = "2"
reqwest = { workspace = true }
serde_json = "1"
