[package]
name = "dxc-core"
version = "0.1.1"
edition = "2024"
description = "DXC Core - Core types, config, and errors"
license = "MIT"
repository = "https://github.com/mrsyntaxdev/DXC"
keywords = ["dxc", "core", "media", "downloader"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
toml = "0.8"
