[package]
name = "dxc-providers"
version = "0.1.0"
edition = "2024"
description = "DXC Providers - Media source providers (YouTube, TikTok, etc.)"
license = "MIT"
repository = "https://github.com/mrsyntaxdev/DXC"
keywords = ["dxc", "providers", "youtube", "tiktok", "instagram", "media"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
dxc-core = { path = "../dxc-core", version = "0.1.0" }
dxc-utils = { path = "../dxc-utils", version = "0.1.0" }

reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
serde_json = "1"
tokio = { workspace = true }
tokio-stream = "0.1"
